Turn on Dist::Zilla support for CPAN releases

--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,11 @@ copyright_holder = Tom Moertel
 
 [AutoPrereqs]
 
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
+
+
 ; [Prereqs]
 ; Carp               = 0
 ; Class::Struct      = 0
